🔄 Otomatik commit: 05.06.2025 16:36:38